disable add service button in input invalid and ensure button visible from screen

--- a/src/main/resources/static/css/customize.css
+++ b/src/main/resources/static/css/customize.css
@@ -34,8 +34,8 @@
     margin-top: 4rem;
 }
 
-.large-bottom-margin {
-    margin-bottom: 4rem;
+.large-bottom-padding {
+    padding-bottom: 4rem;
 }
 
 .module-checkbox {
